[tool.poetry]
name = "test-arch-gitpod"
version = "0.1.0"
description = ""
authors = ["Daniel Biehl <dbiehl@live.de>"]
readme = "README.md"
packages = [{include = "test_arch_gitpod"}]

[tool.poetry.dependencies]
python = "^3.8"
robotframework = "^6.0.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
